--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "undertaker-webpack-server",
+  "name": "undertaker-webpack",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,11 +9,25 @@
   "author": "Michael Delaney <michael@fusepilot.com> (http://fusepilot.com)",
   "license": "ISC",
   "dependencies": {
+    "babel-loader": "^6.2.4",
     "babel-plugin-add-module-exports": "^0.1.2",
     "babel-plugin-transform-object-rest-spread": "^6.6.5",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
+    "coffee-loader": "^0.7.2",
+    "coffee-script": "^1.10.0",
+    "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
+    "gulp-mustache": "^2.2.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-webpack": "^1.5.0",
+    "html-webpack-plugin": "^2.15.0",
+    "json-loader": "^0.5.4",
+    "lodash": "^4.7.0",
+    "style-loader": "^0.13.1",
     "undertaker-registry": "^1.0.0",
-    "webpack-dev-server": "^1.14.1"
+    "url-loader": "^0.5.7",
+    "vinyl-fs": "^2.4.3"
   }
 }
