--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "coffee-loader": "^0.7.2",
     "coffee-script": "^1.10.0",
     "css-loader": "^0.23.1",
+    "deepmerge": "^0.2.10",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "gulp-mustache": "^2.2.0",
@@ -28,6 +29,7 @@
     "style-loader": "^0.13.1",
     "undertaker-registry": "^1.0.0",
     "url-loader": "^0.5.7",
-    "vinyl-fs": "^2.4.3"
+    "vinyl-fs": "^2.4.3",
+    "webpack-dev-server": "^1.14.1"
   }
 }
