--- a/package.json
+++ b/package.json
@@ -2,15 +2,18 @@
   "name": "undertaker-webpack",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile": "babel -d lib/ src/",
+    "prepublish": "npm run compile",
+    "test": "mocha --compilers js:babel-core/register -w test/"
   },
   "author": "Michael Delaney <michael@fusepilot.com> (http://fusepilot.com)",
   "license": "ISC",
   "dependencies": {
     "babel-loader": "^6.2.4",
     "babel-plugin-add-module-exports": "^0.1.2",
+    "babel-plugin-array-includes": "^2.0.3",
     "babel-plugin-transform-object-rest-spread": "^6.6.5",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
@@ -31,5 +34,10 @@
     "url-loader": "^0.5.7",
     "vinyl-fs": "^2.4.3",
     "webpack-dev-server": "^1.14.1"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-things": "^0.2.0",
+    "undertaker": "^0.15.0"
   }
 }
